--- a/TiendaServicios/TiendaServicios.Api.Libro/appsettings.json
+++ b/TiendaServicios/TiendaServicios.Api.Libro/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConexionDB": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=tiendalibro;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
